load("//publish:defs.bzl", "release_strip_binary")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "infogetty_bin",
    srcs = [
        "infogetty-cpp/infogetty.cc",
        "infogetty-cpp/network_info.cc",
        "infogetty-cpp/network_info.h",
    ],
    copts = ["-std=c++17"],
    linkopts = [
        "-lsystemd",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
    ],
    deps = ["@libsystemd"],
)

release_strip_binary(
    name = "infogetty_stripped",
    binary = "infogetty_bin",
)

genrule(
    name = "infogetty_cleaned",
    srcs = ["infogetty_stripped"],
    outs = ["infogetty"],
    cmd = "objcopy -R .comment -R .note -R .note.gnu.build-id $< $@",
    executable = True,
    target_compatible_with = [
        "@platforms//os:linux",
    ],
)
